--- a/Front/package.json
+++ b/Front/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "xchange",
+  "name": "front",
   "version": "1.0.0",
   "main": "node_modules/expo/AppEntry.js",
   "scripts": {
@@ -9,15 +9,12 @@
     "web": "expo start --web"
   },
   "dependencies": {
-    "@react-native-masked-view/masked-view": "0.2.9",
-    "@react-navigation/stack": "^6.3.20",
-    "axios": "^1.6.5",
-    "expo": "~49.0.15",
-    "expo-status-bar": "~1.6.0",
+    "@react-navigation/native-stack": "^6.9.17",
+    "axios": "^1.6.7",
+    "expo": "~50.0.2",
+    "expo-status-bar": "~1.11.1",
     "react": "18.2.0",
-    "react-native": "0.72.6",
-    "react-native-gesture-handler": "~2.12.0",
-    "react-navigation": "^5.0.0"
+    "react-native": "0.73.2"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
