To Do - two options on home page

--- a/Front/package.json
+++ b/Front/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "front",
+  "name": "xchange",
   "version": "1.0.0",
   "main": "node_modules/expo/AppEntry.js",
   "scripts": {
@@ -11,10 +11,12 @@
   "dependencies": {
     "@react-navigation/native-stack": "^6.9.17",
     "axios": "^1.6.7",
+    "dotenv": "^16.4.1",
     "expo": "~50.0.2",
     "expo-status-bar": "~1.11.1",
     "react": "18.2.0",
-    "react-native": "0.73.2"
+    "react-native": "0.73.2",
+    "react-native-dotenv": "^3.4.9"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
