--- a/Front/package.json
+++ b/Front/package.json
@@ -9,6 +9,7 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@react-navigation/bottom-tabs": "^6.5.11",
     "@react-navigation/native-stack": "^6.9.17",
     "axios": "^1.6.7",
     "dotenv": "^16.4.1",
