Uploading image to Firebase, accessing user id in different pages (for uploading the product)

--- a/Front/package.json
+++ b/Front/package.json
@@ -14,8 +14,10 @@
     "axios": "^1.6.7",
     "dotenv": "^16.4.1",
     "expo": "~50.0.2",
+    "expo-file-system": "^16.0.6",
     "expo-image-picker": "^14.7.1",
     "expo-status-bar": "~1.11.1",
+    "firebase": "^10.8.0",
     "react": "18.2.0",
     "react-native": "0.73.2",
     "react-native-dotenv": "^3.4.9",
