--- a/Front/package.json
+++ b/Front/package.json
@@ -17,6 +17,7 @@
     "expo": "~50.0.2",
     "expo-file-system": "^16.0.6",
     "expo-image-picker": "^14.7.1",
+    "expo-linear-gradient": "^12.7.2",
     "expo-sms": "~11.7.1",
     "expo-status-bar": "~1.11.1",
     "firebase": "^10.8.0",
