--- a/Front/package.json
+++ b/Front/package.json
@@ -4,32 +4,31 @@
   "main": "node_modules/expo/AppEntry.js",
   "scripts": {
     "start": "expo start",
-    "android": "expo start --android",
-    "ios": "expo start --ios",
+    "android": "expo run:android",
+    "ios": "expo run:ios",
     "web": "expo start --web"
   },
   "dependencies": {
-    "@react-native-async-storage/async-storage": "^1.21.0",
+    "@react-native-async-storage/async-storage": "1.21.0",
     "@react-navigation/bottom-tabs": "^6.5.11",
     "@react-navigation/native-stack": "^6.9.17",
     "axios": "^1.6.7",
     "dotenv": "^16.4.1",
     "expo": "~50.0.2",
-    "expo-file-system": "^16.0.6",
-    "expo-image-picker": "^14.7.1",
-    "expo-linear-gradient": "^12.7.2",
+    "expo-file-system": "~16.0.9",
+    "expo-image-picker": "~14.7.1",
+    "expo-linear-gradient": "~12.7.2",
     "expo-sms": "~11.7.1",
     "expo-status-bar": "~1.11.1",
     "firebase": "^10.8.0",
     "install": "^0.13.0",
-    "pannellum-react": "^1.3.6",
     "react": "18.2.0",
-    "react-native": "0.73.2",
+    "react-native": "0.73.6",
     "react-native-awesome-alerts": "^2.0.0",
     "react-native-dotenv": "^3.4.9",
-    "react-native-google-vr-panorama": "^1.1.2",
     "react-native-image-picker": "^7.1.0",
-    "socket.io-client": "^4.7.5"
+    "socket.io-client": "^4.7.5",
+    "expo-updates": "~0.24.12"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
